kubernetes/apps/firefly-iii/firefly-iii/app/importer-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii-importer
  namespace: firefly-iii
  labels:
    app: firefly-iii-importer
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: firefly-iii-importer
  template:
    metadata:
      labels:
        app: firefly-iii-importer
    spec:
      restartPolicy: Always
      containers:
        - name: firefly-iii-importer
          image: fireflyiii/data-importer:version-1.9.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 1Gi
              cpu: 500m
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
