kubernetes/apps/firefly-iii/firefly-iii/app/importer-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly-iii-importer
  namespace: firefly-iii
spec:
  hostnames:
    - firefly-importer.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: firefly-iii-importer
          namespace: firefly-iii
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
